<resources>
    <string name="app_name">Vocabulary Trainer</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="browse_images">Browse images</string>
    <string name="save_game">💾</string>
    <string name="delete">🗑️</string>
    <string name="word">Word</string>
    <string name="finish">Finish</string>
    <string name="speak">🔊</string>
    <string name="next">⏭</string>
    <string name="prev">⏮</string>
    <string name="close">❌</string>
    <string name="ok">OK</string>
    <string name="action_create_game">Create game</string>
    <string name="action_delete_game">Delete game</string>
    <string name="action_edit_words">Edit words</string>
    <string name="action_edit_name">Edit name</string>
    <string name="action_edit_lang">Edit language</string>
    <string name="game_name">Game name</string>
    <string name="rename_game">Rename game</string>
    <string name="create_new_game">Create new game</string>
    <string name="could_not_rename_game">Could not rename game</string>
    <string name="could_not_change_game_lang">Could not change game language</string>
    <string name="failed_to_delete_game">Failed to delete game</string>
    <string name="could_not_load_game_info">Could not load game info</string>
    <string name="could_not_save_game_info">Could not save game info</string>
    <string name="are_you_sure_delete_game">Are you sure you want to delete this game?</string>
    <string name="are_you_sure_delete_word">Are you sure you want to delete this word?</string>
    <string name="could_not_delete_word_image">Could not delete word image</string>
    <string name="could_not_reorder_question_images">Could not reorder question images</string>
    <string name="failed_to_search">Failed to search</string>
    <string name="pixabay_image_search">Pixabay image search</string>
    <string name="failed_to_init_tts">Failed to initialize text-to-speech module</string>
    <string name="install_more_languages">Install more languages</string>
    <string name="cancel">Cancel</string>
    <string name="enter_word_first">Enter current word name first</string>
    <string name="add_image_first">Add image first</string>
    <string name="add_text_and_image_first">Add text and image for word</string>
    <string name="find_image">🖼️ 🖼️ 🖼️ 🖼️</string>
    <string name="find_word">🔤 🔤 🔤 🔤</string>
    <string name="practice">👩‍🏫 🤔 📖 🎓</string>
    <string name="trying_to_show_image_out_of_range">Trying to show image out of range</string>
</resources>