<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_edit_words"
        android:orderInCategory="100"
        android:title="@string/action_edit_words"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_edit_name"
        android:orderInCategory="101"
        android:title="@string/action_edit_name"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_edit_lang"
        android:orderInCategory="102"
        android:title="@string/action_edit_lang"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="103"
        android:title="@string/action_delete_game"
        app:showAsAction="never" />
</menu>